# Online-store

./: CMakeLists.txt  README.md
include/: auth.h  db_connection.h  menu.h  order.h  payment.h  user.h
sql/: functions.sql  insertdata.sql  procedures.sql  tables.sql  triggers.sql
src/: auth.cpp  hash.cpp  main.cpp  menu.cpp  order.cpp  payment.cpp  user.cpp
